developbranch作ってロイロしてみる

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,11 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+.first-list {
+    width: 100%;
+    li {
+        font-size: 2rem;
+    }
+}
 
+h1 {
+    color: #red;
+}
